--- a/todo
+++ b/todo
@@ -1,6 +1,5 @@
-Allow hiding of record info. Show only tools.
 Show audit history + transaction info
-Show fields
-Adding commands request
-Upload to edge store
+Show all fields with values
 workflow search - open web api and workflow editor
+
+Ссылка на фичи/баги
