--- a/todo
+++ b/todo
@@ -1,3 +1,3 @@
 Show audit history + transaction info
 Show all fields with values
-workflow search - open web api and workflow editor
+Show readable json
